# Dynamic_slam_opencl

./: .gitignore  CMakeLists.txt  Dynamic_slam.cpp  Dynamic_slam.h  Dynamic_slam_kernels.cl  README.md  RunCL.cpp  RunCL.h  RunCL_LinearMipMaps.cpp  RunCL_kernels.cpp  compare_commits.diff  conf.json  convertAhandaPovRayToStandard.cpp  main.cpp  old_kernels.cl  pseudocode.cpp  scratch.cpp  scratch2.cpp  scratch3.cpp
Docs/: IDE_enviroment.md
Docs/notes/: Notes_on_better_mipmap.md  vtp_small_demo_file.vtp
Dynamic_slam/: Dynamic_slam.h  Dynamic_slam.hpp  Dynamic_slam_class.cpp  Dynamic_slam_keyframe.cpp  Dynamic_slam_mapping.cpp  Dynamic_slam_tracking.cpp
RunCL/: RunCL.h  RunCL_DownloadAndSave.cpp  RunCL_class.cpp  RunCL_load_image.cpp  RunCL_macro_conversion.cpp  RunCL_mapping.cpp  RunCL_setup_keyframe.cpp  RunCL_tracking.cpp
kernels/: kernels.h  kernels_load_image.cl  kernels_macros.h  kernels_mapping.cl  kernels_photometric_cost.cl  kernels_setup_keyframe.cl  kernels_tracking.cl
local_conf/: README_local_config_files.md  conf.json  conf_Kaushik_laptop.json  conf_WS.json  conf_clevo.json  conf_clevo2.json  conf_clevo3.json  conf_maciej.json  dtam_opencl_conf_WS.json  dtam_opencl_conf_WS_livingroom_dataset.json  dtam_opencl_conf_WS_office_dataset.json  filepaths.json  filepaths_ThinkPad.json  verbosity.json
local_conf/old/: conf_clevo3.json  dtam_opencl_conf_WS.json  dtam_opencl_conf_WS_livingroom_dataset.json
notes/: markdown-cheat-sheet.md
old/: Dynamic_slam_kernels.cl  RunCL.cpp  RunCL.h
old/utils/: CMakeLists.txt  convertAhandaPovRayToStandard.cpp  fileLoader.cpp
src/: main.cpp
src/Dynamic_slam/: Dynamic_slam.cpp  Dynamic_slam.hpp  Dynamic_slam_keyframe.cpp  Dynamic_slam_mapping.cpp  Dynamic_slam_tracking.cpp
src/RunCL/: RunCL.cpp  RunCL.hpp  RunCL_DownloadAndSave.cpp  RunCL_load_image.cpp  RunCL_macro_conversion.cpp  RunCL_mapping.cpp  RunCL_setup_keyframe.cpp  RunCL_tracking.cpp
src/kernels/: kernels.h  kernels_load_image.cl  kernels_mapping.cl  kernels_photometric_cost.cl  kernels_setup_keyframe.cl  kernels_tracking.cl
src/local_conf/: conf.json  filepaths_Clevo.json  filepaths_ThinkPad.json  filepaths_shrommws.json  verbosity.json
src/utils/: CV_chk.cpp  CV_chk.hpp  conf_params.cpp  conf_params.hpp  convertAhandaPovRayToStandard.cpp  convertTransforms.hpp  opencl_utils.cpp  opencl_utils.hpp  print_functions.cpp  time_utils.cpp  time_utils.hpp
utils/: conf_params.cpp  conf_params.hpp  convertAhandaPovRayToStandard.cpp  convertAhandaPovRayToStandard.h  convertAhandaPovRayToStandard.hpp  convertTransforms.hpp  fileLoader.hpp  json_tree.hpp  print_functions.cpp  print_functions.hpp  utils.hpp
